--- a/projectInfo/src/Home/Home.module.css
+++ b/projectInfo/src/Home/Home.module.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fill,280px);
     gap:40px;
+    margin-left: 200px;
+    
   
 }
 
@@ -15,4 +17,7 @@
     margin-top: 140px;
     display: flex;
     font-size: 1.5rem;
+    color:rgba(255, 255, 255, 0.534);
+    margin-left: 200px;
+    
 }
